@@ -1,5 +1,9 @@
 2006-06-17 Bart Hakvoort <hakvoort@cvs.gnome.org>
 	
+	* cleanups in the core and the fs'es (check/repair)
+
+2006-06-17 Bart Hakvoort <hakvoort@cvs.gnome.org>
+	
 	* src/GParted_Core.cc: use new create_filesystem() in format()
 
 2006-06-17 Bart Hakvoort <hakvoort@cvs.gnome.org>
